--- a/styles.css
+++ b/styles.css
@@ -311,8 +311,9 @@ body,
     width: 250px;
     height: 250px;
     bottom: -10px;
+    position: absolute;
     left: -10px;
-    z-index: 1;
+    z-index: 0;
   }
 
   .invite-card {
