--- a/styles.css
+++ b/styles.css
@@ -315,7 +315,7 @@ body,
     width: 150px;
     height: 150px;
     bottom: -10px;
-    position: absolute;
+    position: fixed;
     left: -10px;
     z-index: 0;
   }
